--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ kotlin = "2.0.21"
 
 coreKtx = "1.12.0"
 appcompat = "1.6.1"
+kotlinxCoroutinesTest = "1.10.2"
 material = "1.10.0"
 activity = "1.7.2"
 constraintlayout = "2.1.4"
@@ -27,6 +28,7 @@ ksp = "2.0.21-1.0.25"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
